fix carousel width on mobile

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -16,3 +16,9 @@ body .carousel p {
 body .carousel h2 {
   color: white;
 }
+
+@media screen and (max-width: 940px) {
+  .carouselContainer {
+    width: 80% !important;
+  }
+}
